enhance compose flow